--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html",
-    "test": "elm-test"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --public-url /split",
+    "test": "elm-test",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "elm-hot": "^1.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.1",
-    "node-elm-compiler": "^5.0.3",
-    "parcel-bundler": "^1.12.3"
+    "elm-hot": "^1.1.2",
+    "node-elm-compiler": "^5.0.4"
+  },
+  "dependencies": {
+    "gh-pages": "^2.1.1",
+    "parcel-bundler": "^1.12.3",
+    "parcel-plugin-sw-precache": "^1.1.1"
   }
 }
